samples/bookmap/valid/R14.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="mychap.ditamap">
    <topicmeta><navtitle>Chapter Title</navtitle></topicmeta>
  </chapter>
</bookmap>