samples/bookmap/invalid/R13.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  {/* Missing chapter */}
</bookmap>